# hdf5file

./: .travis.yml  Cargo.toml  README.md
examples/: object.rs  parse.rs
src/: error.rs  file.rs  group.rs  io.rs  level0.rs  level1.rs  level2.rs  lib.rs  lowlevel.rs
src/lowlevel/: level0.rs  level1.rs  level2.rs
