[package]
name = "hdf5file"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A Rust implementation of HDF5 file format"
homepage = "https://github.com/sile/hdf5file"
repository = "https://github.com/sile/hdf5file"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "sile/yamakan"}
codecov = {repository = "sile/yamakan"}

[dependencies]
bitflags = "1"
byteorder = "1"
itertools = "0.8"
ndarray = "0.12"
trackable = "0.2"

[dev-dependencies]
structopt = "0.2"
